fix(#48): markdown renderer in properties detail overflow

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -171,3 +171,7 @@ html {
     background: var(--el-color-primary-light);
   }
 }
+
+.v-card-title {
+  padding: 0.5rem 0.625rem 0.5rem 1rem;
+}
